# android-learning

./: .gitignore  README.md
01-base-skill/IPC-Exploring/: settings.gradle
01-common/AndroidDatabase/: README.md
01-common/AndroidIPC/: README.md  build.gradle  settings.gradle
01-common/AndroidUseCase/: .gitignore
02-views/UIAndroidView/: build.gradle  settings.gradle
02-views/UIDynamicSkin/: local.properties  settings.gradle
02-views/UIJetpackCompose/: README.md  build.gradle  settings.gradle
02-views/UINotchScreen/: settings.gradle
02-views/UISystem/: README.md  build.gradle  libs.gradle  local.properties  settings.gradle
02-views/UIWebViewBasic/: build.gradle  libs.gradle
03-architecture/APT-Router/: build.gradle  settings.gradle
03-architecture/Imooc-Architecture/: README.md
03-architecture/SPIAndroid/: settings.gradle
03-architecture/imooc-music-app/: imooc.gradle  settings.gradle
03-architecture/imooc-music-app-refactor/: README.md  imooc.gradle
03-extra-skill/Ble-Android/: settings.gradle.kts
03-network/Network-GlideProgres/: readme.md
04-aop/AndroidASM-ClickDebounce/: settings.gradle
04-aop/AndroidAspectj-AutoUpload/: README.md
04-aop/AndroidAspectj01/: build.gradle
04-open-source/AndroidBitmapMonitorAnalysis/: Version.md
04-open-source/AndroidPerformanceMonitor/: build.gradle
04-open-source/AndroidPerformanceMonitorAnalysis/: VERSION.md
04-open-source/Dagger2AndroidInjection-v2.24/: README.md  build.gradle  settings.gradle
04-open-source/GlideAnalysis/: settings.gradle
04-open-source/LiveEventBusAnalysis/: README.md
04-open-source/RabbitClientAnalysis/: README.md  build.gradle
04-open-source/RetrofitAnalysis/: README.md
05-architecture/: README.md
05-architecture/AOP-AndroidASM-ClickDebounce/: README.md
05-architecture/AOP-AndroidAspectj-AutoUpload/: build.gradle
05-architecture/AOP-AndroidAspectj01/: dependencies.gradle
05-architecture/AOP-AndroidAspectj02/: build.gradle
05-architecture/AOP-AndroidAspectj03/: build.gradle
05-architecture/APT-ButterKnife/: build.gradle  settings.gradle
05-architecture/APT-Router/: README.md  config.gradle
05-architecture/APT-Simplest/: README.md
05-architecture/Koin-with-Android/: settings.gradle
05-architecture/Kotlin-Android-V1.2/: README.md  build.gradle
05-architecture/Kotlin-Android-V1.3/: README.md  build.gradle
05-architecture/Kotlin-AndroidX/: README.md  build.gradle  local.properties
05-architecture/Kotlin-with-Jetpack-Latest/: README.md  build.gradle
05-architecture/SPI-Android/: README.md
05-architecture/XX-IPC-Arch/: README.md  local.properties
05-architecture/XX-JetpackMvvm-Fixed/: README.md  build.gradle  settings.gradle
05-architecture/XX-UIWebViewComponent/: README.md  build.gradle  settings.gradle
05-architecture/imooc-music-app/: .gitignore  README.md  build.gradle  gradle.properties
05-architecture/imooc-music-app-refactor/: .gitignore  build.gradle  settings.gradle
05-open-source/ARouterAnalysis/: README.md  version
05-open-source/Dagger2AndroidInjection-v2.16/: README.md  build.gradle  settings.gradle
05-open-source/Dagger2AndroidInjection-v2.19/: build.gradle
05-open-source/OkHttpAnalysis/: settings.gradle
07-native-dev/02_ndk_build_way/NDK-ThirdLib-CMake/app/: CMakeLists.txt  build.gradle
07-native-dev/02_ndk_build_way/NDK-ThirdLib-CMake/app/src/main/: AndroidManifest.xml
07-native-dev/02_ndk_build_way/NDK-ThirdLib-CMake/app/src/main/cpp/: native-lib.c
07-native-dev/04_ndk_practice/NDK-FmodAndroid/app/: CMakeLists.txt  build.gradle
07-native-dev/04_ndk_practice/NDK-FmodAndroid/app/src/main/: AndroidManifest.xml
07-native-dev/04_ndk_practice/NDK-FmodAndroid/app/src/main/cpp/: common.cpp
07-native-dev/04_ndk_practice/NDK-FmodAndroid/app/src/main/res/layout/: activity_main.xml
07-native-dev/04_ndk_practice/NDK-GifLib-Simple/GifFrameWork/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
07-native-dev/04_ndk_practice/NDK-ImageCompressor/libs/src/main/cpp/: CMakeLists.txt
07-native-dev/04_ndk_practice/NDK-ImageCompressor/libs/src/main/cpp/libjpeg/: jpeglib.h
07-optimization/DN7ZipCompress/app/src/main/cpp/: CMakeLists.txt
07-optimization/DN7ZipCompress/app/src/main/cpp/lib7zr/CPP/ANDROID/7zr/jni/: Application.mk.bak
08-ndk/: README.md
08-ndk/04_ndk_practice/NDK-GifLib/app/src/main/cpp/: CMakeLists.txt  GifFrame.h  JavaInputStream.cpp  JavaInputStream.h  log.h
08-ndk/04_ndk_practice/NDK-bsdiff/bspatch_android/app/: CMakeLists.txt  build.gradle
08-ndk/04_ndk_practice/NDK-bsdiff/bspatch_android/app/src/main/assets/: version_2.txt
08-ndk/04_ndk_practice/NDK-bsdiff/bspatch_android/app/src/main/java/com/ztiany/bsdiffapp/: MainActivity.java
08-ndk/04_ndk_practice/NDK-bsdiff/bspatch_android/app/src/main/java/com/ztiany/bsdiffapp/utils/: ApkUtils.java
08-ndk/04_ndk_practice/NDK-bsdiff/bspatch_android/app/src/main/res/values/: strings.xml
08-ndk/04_ndk_practice/NDK-bsdiff/bspatch_android/app/src/test/java/com/ztiany/bsdiffapp/: ExampleUnitTest.java
08-optimization/AndroidAPM/app/src/main/cpp/: CMakeLists.txt  memory_allocation.cpp  memory_tracker.cpp  native_util.cpp  native_util.h
android-apm/: .gitignore  README.md  build.gradle.kts
android-apm/app/src/main/cpp/: CMakeLists.txt
android-apm/app/src/main/cpp/bitmap/: bitmap_monitor.cpp  bitmap_monitor.h  bitmap_saver.cpp  bitmap_saver.h
android-apm/app/src/main/cpp/common/: native_util.cpp  native_util.h
android-apm/app/src/main/cpp/memory/: memory_allocation.cpp  memory_tracker.cpp
android-experiments/: build.gradle
android-gradle-practice/: .gitignore
android-ipc-exploring/: README.md
android-web-development/: README.md
architecture-components/: settings.gradle
architecture-koin/: README.md  build.gradle
connectivity-bluetooth/: README.md
connectivity-wifip2p/: README.md  settings.gradle.kts
geektime-advanced-android/: README.md
ui-android-compose/: README.md  build.gradle  settings.gradle
ui-android-compose-rwx/: README.md  build.gradle  settings.gradle
ui-android-view/: README.md  build.gradle
(+4230 files in other folders)
